add more semantic html and places for future info

--- a/index.html
+++ b/index.html
@@ -22,10 +22,15 @@
         <input id="search" type="text">
         <button id="btn-search">Search</button>
     </form>
-    <ol></ol>
-    <button id="prev">Previous</button>
-    <span id="pages"></span>
-    <button id="next">Next</button>
+    <section class="results">
+        <ol class="books"></ol>
+    </section>
+    <nav>
+        <button id="prev">Previous</button>
+        <span id="pages"></span>
+        <button id="next">Next</button>
+    </nav>
+    <footer></footer>
     <script src="main.js"></script>
 </body>
 </html>
