improved page nav stylings and added image for no cover avaialbe

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section class="results">
         <ol class="books"></ol>
     </section>
-    <nav>
+    <nav class="page-container">
         <button id="prev">Previous</button>
         <span id="pages"></span>
         <button id="next">Next</button>
