added font awesome for icons to add to tbr and add to read

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/all.css">
+    <link rel="stylesheet" href="css/all.min.css">
 </head>
 <body>
     <form action="">
@@ -25,6 +27,8 @@
         <button id="btn-search">Search</button>
     </form>
     <section class="results">
+        <i class="fa-regular fa-heart"></i>
+        <i class="fa-regular fa-bookmark"></i>
         <ol class="books"></ol>
     </section>
     <nav class="page-container">
