added publisher and subject search

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
             <option value="inauthor">Author</option>
             <option value="intitle">Title</option>
             <option value="inauthor-title">Author and Title</option>
+            <option value="inpublisher">Publisher</option>
+            <option value="subject">Genre</option>
             <option value="isbn">ISBN</option>
         </select>
         <input id="search" type="text">
