form basis of local storage infomation setting and retrieving

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     </form>
     <section class="results">
         <span id="error"></span>
-        <span class="read fa-regular fa-heart"></span>
-        <span class="tbr fa-regular fa-bookmark"></span>
+        <!-- <span class="read fa-regular fa-heart"></span>
+        <span class="tbr fa-regular fa-bookmark"></span> -->
         <ol class="books"></ol>
     </section>
     <nav class="page-container">
