added minor styling and a list select list to see tbr books and read books

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
         <input id="search" type="text">
         <button id="btn-search">Search</button>
     </form>
+    <select name="my-lists" id="my-lists">
+        <option value="my-lists" disabled selected>My Lists</option>
+        <option value="read">Read</option>
+        <option value="tbr">TBR</option>
+    </select>
     <section class="results">
         <span id="error"></span>
         <!-- <span class="read fa-regular fa-heart"></span>
