added styling and results total display

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <option value="read">Read</option>
         <option value="tbr">TBR</option>
     </select>
+    <span>Results: </span><span class="total"></span>
     <section class="results">
         <span id="error"></span>
         <!-- <span class="read fa-regular fa-heart"></span>
