some minor styling tests and class and element adds for styling stuff and attributions

--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
             <option value="read">Read</option>
             <option value="tbr">TBR</option>
         </select>
-        <span>Results: </span><span class="total"></span>
+        <div class="searches">
+            <span class="search-power">Google Books search results: </span>
+            <span class="total"></span>
+        </div>
         </div>
     </header>
     <section class="results">
@@ -56,7 +59,10 @@
         <span id="pages"></span>
         <button id="next">Next</button>
     </nav>
-    <footer></footer>
+    <footer>
+        <span>Website built by: <a target="_blank" href="https://allenawilliamsonportfolio.netlify.app/">Allena Williamson</a></span>
+        <span>Data from: <a target="_blank" href="">Book</a></span>
+    </footer>
     <script src="main.js"></script>
 </body>
 </html>
