--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <option value="intitle">Title</option>
                 <option value="inauthor-title">Title and Author</option>
                 <option value="inpublisher">Publisher</option>
-                <option value="subject">Genre</option>
+                <option value="subject">Subject</option>
                 <option value="isbn">ISBN</option>
             </select>
         </fieldset>
