added results per page element and some styling for that and it's parent container

--- a/index.html
+++ b/index.html
@@ -48,6 +48,15 @@
     <div id="result-count">
         <span class="search-power"></span>
         <span class="total"></span>
+        <fieldset id="pages-display">
+            <label for="maxPerPage">Results per page:</label>
+            <select name="maxPerPage" id="maxPerPage">
+                <option value="10" selected>10</option>
+                <option value="20">20</option>
+                <option value="30">30</option>
+                <option value="40">40</option>
+            </select>
+        </fieldset>
         <span id="error"></span>
     </div>
     <section class="results">
