--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 </head>
 <body>
     <header>
-        <h1>Overbooked</h1>
+        <h1>
+            <a href="index.html" rel="site homepage">Overbooked</a>
+        </h1>
         <select name="my-lists" id="my-lists">
             <option value="my-lists" disabled selected>My Lists</option>
             <option value="read">Read</option>
